overflow fix, got rid of scroll bar by accident

--- a/css.css
+++ b/css.css
@@ -1,5 +1,6 @@
 html {
 	scroll-behavior: smooth;
+	overflow:hidden;
 }
 
 .sideNav {
@@ -11,6 +12,7 @@ html {
 	top: 30%;
 	left: 0;
 	padding-top: 20px;
+	overflow:hidden;
 }
 
 .sideNav a {
@@ -22,35 +24,53 @@ html {
 	font-size: 17px;
 	color: #818181;
 	display: block;
+	overflow:hidden;
 }
 
 .sideNav a:hover{
 	background-color: #e6e6e6;
 	color: black;
+	overflow:hidden;
 }
 
 .sideNav a:active {
 	background-color: #blue;
 	color: white;
+	overflow:hidden;
 }
 
 #header {
-	height: 50px;
-	background-color:EEEEEE;
+	height: 500px;
+	background-color:white;
+	padding: 20px;
+	position: relative;
+	overflow:hidden;
+}
+
+#heading {
+	font-size: 70px;
+	font-family: "Arial";
+	overflow:hidden;
+}
+
+#subheader {
+	font-family: "Arial";
+	overflow:hidden;
 }
 
 #title {
-	padding-top: 20%;
+	padding-top: -20%;
+	overflow:hidden;
 }
 
-#home {
+/*#home {
 	display: flex;
 	align-items: center;
 	justify-content: center;
 	height: 100vh;
 	width: 100%;
 	background-color:EEEEEE;
-}
+}*/
 
 #learnRussian {
 	display: flex;
@@ -60,16 +80,19 @@ html {
 	width: 100%;
 	background-color:EEEEEE;
 	position: relative;
+	overflow:hidden;
 }
 
 #russianTitle {
 	top: 150px;
 	left: 200px;
 	position: absolute;
+	overflow:hidden;
 }
 
 #russianPic {
 	padding-top:50px;
+	overflow:hidden;
 }
 
 #russianContent {
@@ -78,6 +101,7 @@ html {
 	width: 500px;
 	left: 580px;
 	position: absolute;
+	overflow:hidden;
 }
 
 #connectFour {
@@ -88,16 +112,19 @@ html {
 	width: 100%;
 	background-color:white;
 	position: relative;
+	overflow:hidden;
 }
 
 #connectTitle {
 	top: 150px;
 	left: 200px;
 	position: absolute;
+	overflow:hidden;
 }
 
 #connectPic {
 	padding-top:50px;
+	overflow:hidden;
 }
 
 #connectContent {
@@ -106,32 +133,37 @@ html {
 	width: 500px;
 	left: 500px;
 	position: absolute;
+	overflow:hidden;
 }
 
 #resume {
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	height: 100vh;
+	height: 75vh;
 	width: 100%;
 	background-color:EEEEEE;
+	overflow:hidden;
 }
 
 #about {
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	height: 200px;
+	height: 150px;
 	width: 100%;
 	background-color:white;
+	overflow:hidden;
 }
 
 body {
 	padding:0;
 	background-color: #EEEEEE;
+	overflow:hidden;
 }
 
 h1 {
 	color: #333;
 	text-align: center;
+	overflow:hidden;
 }
